{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 55,
  "lineage": "9397f2a9-8b75-6fcc-2ecc-361da08bf73b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0858f754d1ce2c0b5",
            "arn": "arn:aws:ec2:us-east-1:190997319353:instance/i-0942c2f92fe52183a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0942c2f92fe52183a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_ed25519",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07f227fec73e6913e",
            "private_dns": "ip-10-123-1-22.ec2.internal",
            "private_ip": "10.123.1.22",
            "public_dns": "ec2-52-87-238-112.compute-1.amazonaws.com",
            "public_ip": "52.87.238.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a4809224414a068",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0497efb6e3a78544e",
            "tags": {
              "Name": "Lab-Ubuntu"
            },
            "tags_all": {
              "Name": "Lab-Ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0667bfb9cf3f8d056"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_auth",
            "aws_security_group.my_sg",
            "aws_subnet.my_private_subnet",
            "aws_vpc.sportradar_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_dev_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0858f754d1ce2c0b5",
            "arn": "arn:aws:ec2:us-east-1:190997319353:instance/i-0f85fe60b7a6aadf5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f85fe60b7a6aadf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "id_ed25519",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099e9353aa5a6447e",
            "private_dns": "ip-10-123-1-244.ec2.internal",
            "private_ip": "10.123.1.244",
            "public_dns": "ec2-3-92-2-155.compute-1.amazonaws.com",
            "public_ip": "3.92.2.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0b3efd3e40acaf2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0497efb6e3a78544e",
            "tags": {
              "Name": "Lab-Ubuntu_2"
            },
            "tags_all": {
              "Name": "Lab-Ubuntu_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0667bfb9cf3f8d056"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_auth",
            "aws_security_group.my_sg",
            "aws_subnet.my_private_subnet",
            "aws_vpc.sportradar_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:internet-gateway/igw-055697e40617cfeb5",
            "id": "igw-055697e40617cfeb5",
            "owner_id": "190997319353",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-01fd9a6412831d5bc"
          },
          "dependencies": [
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-055697e40617cfeb5",
            "id": "r-rtb-0dd2214878ad0b86c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd2214878ad0b86c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.my_public_rt",
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:route-table/rtb-0dd2214878ad0b86c",
            "id": "rtb-0dd2214878ad0b86c",
            "owner_id": "190997319353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055697e40617cfeb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_public_rt"
            },
            "tags_all": {
              "Name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fd9a6412831d5bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7f7446cef4f1a89",
            "route_table_id": "rtb-0dd2214878ad0b86c",
            "subnet_id": "subnet-0497efb6e3a78544e"
          },
          "dependencies": [
            "aws_route_table.my_public_rt",
            "aws_subnet.my_private_subnet",
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:security-group/sg-0667bfb9cf3f8d056",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0667bfb9cf3f8d056",
            "ingress": [
              {
                "cidr_blocks": [
                  "78.30.4.54/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "190997319353",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01fd9a6412831d5bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:subnet/subnet-0497efb6e3a78544e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0497efb6e3a78544e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190997319353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private"
            },
            "tags_all": {
              "Name": "dev-private"
            },
            "vpc_id": "vpc-01fd9a6412831d5bc"
          },
          "dependencies": [
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sportradar_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:subnet/subnet-0d63a01fea133abcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d63a01fea133abcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190997319353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sportradar-private"
            },
            "tags_all": {
              "Name": "sportradar-private"
            },
            "vpc_id": "vpc-01fd9a6412831d5bc"
          },
          "dependencies": [
            "aws_vpc.sportradar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "admon_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:vpc/vpc-04d1c1e17a6b4baa2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.122.0.0/16",
            "default_network_acl_id": "acl-0d613ca40b0eb8011",
            "default_route_table_id": "rtb-0f4da485917d37be8",
            "default_security_group_id": "sg-095f1be67cbbb73db",
            "dhcp_options_id": "dopt-061f1de0937a251f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04d1c1e17a6b4baa2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4da485917d37be8",
            "owner_id": "190997319353",
            "tags": {
              "Name": "admon_vpc"
            },
            "tags_all": {
              "Name": "admon_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sportradar_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190997319353:vpc/vpc-01fd9a6412831d5bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-062d170282b22ed26",
            "default_route_table_id": "rtb-02fa6ea4156aa9ce3",
            "default_security_group_id": "sg-0f39140df737424fa",
            "dhcp_options_id": "dopt-061f1de0937a251f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01fd9a6412831d5bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fa6ea4156aa9ce3",
            "owner_id": "190997319353",
            "tags": {
              "Name": "sportradar_vpc"
            },
            "tags_all": {
              "Name": "sportradar_vpc"
            }
          }
        }
      ]
    }
  ]
}